#5 Fix: Merged sidebar collapsed styles into one sidebar css file. Added padding variable, code-review.

--- a/style/colors.css
+++ b/style/colors.css
@@ -5,7 +5,6 @@
   --color-body-dark: #595f69;
   --color-grey: #c6c9cc;
   --color-border: #e8e9eb;
-  --color-bg: #f8f8f8;
   --color-white: #ffffff;
   --color-accent: #304ffd;
   --color-orange: #ff965d;
